--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^29.0.1",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
