--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An amazing Ecommerce website",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV='production' node ./server/",
-    "test": "cross-env NODE_ENV='test' jest",
-    "dev": "cross-env NODE_ENV='development' nodemon ./server/"
+    "start": "cross-env NODE_ENV=production node ./server/",
+    "test": "cross-env NODE_ENV=test jest",
+    "dev": "cross-env NODE_ENV=development nodemon ./server/"
   },
   "repository": {
     "type": "git",
